# fraikin_home_automation

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-fraikin_home_automation  bazel-out  bazel-testlogs  requirements.txt  session_name.session
android_app/src/main/: AndroidManifest.xml  BUILD
common/base_classes/: BUILD  i_interface.h  i_module.h  interface_base.h  module_base.cpp  module_base.h
common/interfaces/: BUILD  i_module.h  module_base.h
common/py_base_classes/: BUILD
communication/data_types/: BUILD  danbolig_new_house.json  test_interface_data.json
communication/external_interface_communication/raspi/: BUILD
communication/interfaces/: BUILD  interface_definitions.bzl
communication/interfaces/test_interface/: BUILD  test_interface.h
cpp_modules/: BUILD  modules.bzl
cpp_modules/blink/: blink.cpp
cpp_modules/blink2/: blink2.cpp  blink2.h
deployment/: BUILD  execution_master.cpp  test.h
deployment/arduino_robocar_onboard/: BUILD  execution_master.cpp
deployment/raspberry_pi_home_base/: BUILD
deployment/raspberry_pi_robocar_onboard/: BUILD
fraikin_home_automation/: .clang-format  README.md
fraikin_home_automation/common/cpp_base_classes/: i_module.h  interface_base.h  module_base.h
fraikin_home_automation/common/logging/: BUILD  logging.h
fraikin_home_automation/common/py_base_classes/: i_module.py  interface_base.py
fraikin_home_automation/communication/data_types/: BUILD  christmas_light_request.json  christmas_light_status.json  electricity_prices.json  flight_altitude.json  flight_direction.json  flight_main_rotor_speed.json  flight_switches.json  light_chain_request.json  module_status.json  people_at_home.json  requested_smart_home_runs.json  scheduled_smart_home_runs.json  test_interface_data.json  vacuum_robot_requests.json  vacuum_robot_status.json
fraikin_home_automation/communication/interfaces/: BUILD  interface_definitions.bzl
fraikin_home_automation/deployment/arduino_bluetooth_remote/: BUILD
fraikin_home_automation/deployment/arduino_flight_controller/: BUILD
fraikin_home_automation/deployment/raspberry_pi_home_base/: BUILD  deploy_raspi_deployment.py  replaceall_symlinks.py
fraikin_home_automation/deployment/raspberry_pi_robocar_onboard/: BUILD
fraikin_home_automation/modules/cpp_modules/: modules.bzl
fraikin_home_automation/modules/py_modules/: BUILD  modules.bzl
fraikin_home_automation/utils/code_generators/: BUILD  create_app_interface.bzl  create_app_interface.py  create_arduino_deployment_core.bzl  create_arduino_deployment_core.py  create_arduino_interface_bluetooth_receiver.bzl  create_arduino_interface_bluetooth_receiver.py  create_arduino_interface_bluetooth_sender.bzl  create_arduino_interface_bluetooth_sender.py  create_arduino_interface_funk_receiver.bzl  create_arduino_interface_funk_receiver.py  create_data_type_cpp.bzl  (+17 more)
modules/: BUILD  modules.bzl
modules/blink/: BUILD  blink.cpp  blink.h
modules/cpp_modules/: BUILD  modules.bzl
modules/py_modules/: BUILD  modules.bzl
playground/: andel_energi_test.py  object_Tracking.py  opencv_object_tracking.py  send_on_websocket.py  session_name.session  sonoff_test.py  test2.py  test3.py  websocket_server.py
playground/christmas_songs_outside/: christmas_songs_outside.py
playground/pysonoff_test/: switch_sonoff_test.py
utils/: helpers.bzl
utils/code_generators/: BUILD  create_app_interface.py  create_arduino_deployment_core.bzl  create_arduino_interface_receiver.py  create_data_type_cpp.py  create_data_type_py.bzl  create_data_type_py.py  create_interface_cpp.bzl  create_interface_cpp.py  create_interface_py.py  create_raspi_app_interface_receiver.bzl  create_raspi_app_interface_receiver.py  create_raspi_app_interface_sender.bzl  create_raspi_app_interface_sender.py  create_raspi_deployment_core.bzl  create_raspi_deployment_core.py  create_raspi_interface_receiver.bzl  create_raspi_interface_receiver.py  create_raspi_interface_sender.bzl  create_raspi_interface_sender.py
utils/test_stubs/: arduino_mock.h
(+113 files in other folders)
